--- a/module_2/style.css
+++ b/module_2/style.css
@@ -16,16 +16,14 @@ p {background-color: #E9967A;
   height: 100px;
   font-family: Helvetica;
   color: white;
-  float;
   clear: both;
 }
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 2px solid green;
-    margin: 3px;
-    margin-top: 30px
+    margin-top: 30px;
+    display: block;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -37,7 +35,7 @@ p {background-color: #E9967A;
     width: 25%;
   }
   .col-lg-4 {
-    width: 32%;
+    width: 33.33%;
   }
   .col-lg-5 {
     width: 41.66%;
